--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "web": "vite"
+    "web": "vite --host"
   },
   "devDependencies": {
     "vite": "^4.4.5"
